--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
 baseurl = "http://replace-this-with-your-hugo-site.com/"
-title = "Electry::Files"
+title = "Cours LP IMASH 2017"
 languageCode = "fr-fr"
