--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://lpimash.revollat.net/"
-title = "test"
+baseurl = "http://lp.revollat.net/"
+title = "Cours LP 2016-2017"
 DefaultContentLanguage = "fr"
 languageCode = "fr-fr"
